--- a/index.html
+++ b/index.html
@@ -14,13 +14,24 @@
         <h1 class="title">Color Lighten/Darken</h1>
     
         <label for="hex">Color (Hex)</label>
-        <input type="text" name="hex" id="hexInput" placeholder="#000000">
+        <input type="text" name="hex" id="hexInput" placeholder="#000000" value="#E8C9C7">
+
+        <div class="toggle">
+            <p id="lightenText"
+            class="toggle-text">Lighten</p>
+            <div id="toggleBtn" class="toggle-btn">
+                <div class="inner-circle"></div>
+            </div>
+
+            <p id="darkenText"
+            class="toggle-text unselected">Darken</p>
+        </div>
         
         <label for="slider" id="sliderText">0%</label>
         <input type="range" min="0" max="100" value="0" class="slider" id="slider" name="slider"></input>
         <p>Input Color</p>
         <div id="inputColor" class="box"></div>
-        <p>Altered Color</p>
+        <p id="alteredColorText">Altered Color</p>
         <div id="alteredColor" class="box"></div>
     </div>
     <script src="index.js"></script>
